# SystemC_Compression

./: .gitmodules  CMakeLists.txt
coder/include/: decoder.h  encoder.h
coder/src/: decoder.cpp  encoder.cpp
test/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp  main.cpp
